--- a/designs/splitter.html
+++ b/designs/splitter.html
@@ -1,13 +1,16 @@
 <div className="flex flex-col justify-center items-center">
-    <div className="flex flex-col justify-center items-center">
-        <h1 className="text-2xl font-bold mb-4">BIP-39 Splitter</h1>
-        <p className="mb-4">Enter your mnemonic phrase to split it into two parts.</p>
-        <div className="flex flex-col items-center">
-        <input
-            type="text"
-            placeholder="Enter mnemonic phrase"
-            className="border border-gray-300 p-2 mb-4 w-full max-w-md"
-        />
-        <button className="bg-blue-500 text-white p-2 rounded">Split</button>
-        </div>
+  <div className="flex flex-col justify-center items-center">
+    <h1 className="text-2xl font-bold mb-4">BIP-39 Splitter</h1>
+    <p className="mb-4">
+      Enter your mnemonic phrase to split it into two parts.
+    </p>
+    <div className="flex flex-col items-center">
+      <input
+        type="text"
+        placeholder="Enter mnemonic phrase"
+        className="border border-gray-300 p-2 mb-4 w-full max-w-md"
+      />
+      <button className="bg-blue-500 text-white p-2 rounded">Split</button>
+    </div>
   </div>
+</div>
