--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>BIP-39 tools</title>
   </head>
   <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
